Correct the mistake

--- a/btvn2.html
+++ b/btvn2.html
@@ -31,6 +31,7 @@
             margin-left: 17%;
             margin-right: 17%;
         }
+        
     </style>
 </head>
 
@@ -102,6 +103,7 @@
             alt="Hinh anh trong blog" title="Hinh anh khong gian lop hoc">
         <p> Hình ảnh các kiểu lớp học tại Techmaster</p>
     </div>
+    <a href="https://techmaster.vn/posts/36136/nguoi-moi-bat-dau-co-nen-hoc-frontend-hay-khong" target="_blank"> Link đến bài blog </a>
 </body>
 
 </html>
