--- a/buoi4/code.html
+++ b/buoi4/code.html
@@ -476,7 +476,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div id="footer">
         <div style="background-color:#464646" class="container-fluid" id="footer">
             <div class="container footer">
                 <footer>
