--- a/buoi5/BTVN5/pts.html
+++ b/buoi5/BTVN5/pts.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photoshop</title>
 </head>
-<body>
-    <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
-        <!-- Save for Web Slices (12345678910.psd) -->
-        <img src="images/12345678910.gif" width="300" height="209" alt="anhpts">
-        <!-- End Save for Web Slices -->
-        </body>
+
+<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+    <!-- Save for Web Slices (robin.jpg) -->
+    <img src="./robin.gif" width="744" height="456" alt="">
+    <br>
+    <img src="./1234567.gif" width="744" height="456" alt="">
+    <br>
 </body>
+
 </html>
