--- a/buoi8/index8.html
+++ b/buoi8/index8.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../libra/prism.css">
 </head>
 
 <body>
@@ -12,7 +13,7 @@
     <script src="./main.js"></script>
 
 
-    <script>
+    <script src="../libra/prism.js">
         alert('xin chào')
         document.write("chào các bạn")// Ghi vào phần hiển thị của trình duyệt
 
@@ -117,6 +118,7 @@
              let address = "Hà Nội"
              console.log(address)
          }
+
     </script>
 </body>
 
