--- a/buoi9/hw9.html
+++ b/buoi9/hw9.html
@@ -98,7 +98,7 @@
             let k = l.slice(0, l.length - 1)
             return k
         }
-        console.log(strr1("a", 10))
+        console.log(str("a", 10))
     </script>
 </body>
 
