--- a/buoi12/index12.html
+++ b/buoi12/index12.html
@@ -118,6 +118,10 @@
         console.log(Newtimes("9:30:05", 7))
         console.log(Newtimes("9:30:05", 1000))
         console.log(Newtimes("9:30:05", 3600))
+
+        /// mootj ddeen 10
+        ////aaaaaaaaaaaaa
+        /////bbbbbbbbbbbb
     </script>
 </body>
 
