--- a/buoi15/form.html
+++ b/buoi15/form.html
@@ -13,13 +13,12 @@
 </head>
 
 <body>
-    <p id="text">Good night</p>
-    <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-    </ul>
+    <input type="text" placeholder="Enter Name" class="input">
+    <br>
+    <h1></h1>
+    <p>1243455</p>
     <button id="btn001">hide</button>
+    <button class="btn"> Submit</button>
     <div>
         <label for="texture-selector">Choose a texture:</label>
         <select id="texture-selector">
@@ -34,32 +33,33 @@
 
     <div id="texture-background" style="width: 400px; height: 400px"></div>
     <script>
-        let text123 = document.getElementById('text')
-        console.log(text123)
-        text123.style.color = "#777"
-        text123.style.fontSize = "2rem"
-        text123.innerHTML = "Tôi có thể làm <em> bất cứ điều gì </em> tôi muốn với JavaScript."
+        let btn = document.querySelector('.btn')
+        let input = document.querySelector('.input')
+        let h1 = document.querySelector('h1')
 
-        let ul3 = document.querySelector('ul')
-        let li3 = document.querySelector('li')
 
-        let li = document.getElementsByTagName('li')
-        for (i = 0; i < li.length; i++) {
-            li[i].style.color = 'blue'
-        }
+        btn.addEventListener('click', function () {
+            let value = input.value
+            if (value == '') {
+                alert(" Nhập tên đi")
+                return
+            }
+            h1.innerText = value
+            input.value = ''
+            input.focus()
+        })
+        input.addEventListener('blur', function () {
+            let value = this.value
+            this.value = value.toUpperCase()
+        })
 
-        console.log(li)
         // Tạo 1 thẻ p có nội dung bất kỳ và 1 thẻ button sau đó ấn vào button thì toggle ẩn/hiện thẻ 
         let para = document.querySelector('p')
         let btn01 = document.querySelector('#btn001')
         btn01.addEventListener('click', function () {
-            if (btn01.innerText = 'hide') {
-                para.classList.toggle('toggle')
-                btn01.innerText = 'show'
-            } else {
-                para.classList.toggle('toggle')
-                btn01.innerText = 'hide'
-            }})
+            para.classList.toggle('toggle')
+            btn01.innerText = 'show'
+        })
         //4. Lắng nghe sự kiện "change" của ô input. Thay đổi background-image của div = giá trị trong ô input
         let select = document.querySelector('#texture-selector')
         let bak = document.querySelector('#texture-background')
@@ -67,10 +67,9 @@
             let value = this.value
             bak.style.backgroundImage = `url(${value})`
         })
-
+        //Thêm 1 nút "add" + 1 ô input để nhập text. Mỗi khi bấm nút thêm 1 thẻ <li> có nội dung là nội dung trong ô input vào cuối danh sách
+            
     </script>
-
-    <!-- DONE -->
 </body>
 
 </html>
