--- a/buoi14/hw14-2.html
+++ b/buoi14/hw14-2.html
@@ -5,10 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .toggle {
+            display: none
+        }
+    </style>
 </head>
 
 <body>
-    <ul id="list">
+
+
+    <input id="addip" placeholder="Nhập vào đi bạn ôi..."> </input>
+    <br>
+    <button id="addbtn">Add</button>
+    <br>
+    <button id="reset">Remove</button>
+    <br>
+    <button id="btnhs" > Hide</button>
+    <ul id="list">   
         <li id="li1">Item 1</li>
         <li>Item 2</li>
         <li id="li3">Item 3</li>
@@ -48,8 +62,42 @@
     document.body.appendChild(input)
 
     let button = document.createElement('button')
-    button.textContent = 'Submit' 
+    button.textContent = 'Submit'
     document.body.appendChild(button)
+
+    // Buổi 2
+    //Thêm 1 nút "add" + 1 ô input để nhập text. Mỗi khi bấm nút vào nút "add" thêm 1 thẻ <li> có nội dung là nội dung trong ô input vào cuối danh sách ul
+    let buttonadd = document.querySelector('#addbtn')
+    let addip = document.querySelector('#addip')
+    buttonadd.addEventListener('click', function () {
+        let value = addip.value
+        let newli4 = document.createElement('li')
+        newli4.innerText = value
+        ul1.appendChild(newli4)
+    })
+
+    //Thêm 1 nút "remove". Chức năng để xóa thẻ <li> cuối cùng của danh sách ul
+    let remove = document.querySelector('#reset')
+    remove.addEventListener('click', function () {
+        let li345 = ul1.lastChild
+        ul1.removeChild(li345)
+    })
+    //Thêm 1 nút "Hide" trên đầu của danh sách <ul>.
+    //Khi bấm vào "Hide" thì <ul> sẽ ẩn. Đồng thời label của nút "Hide" => "Show"
+    //Và ngược lại Khi bấm vào "Show" thì <ul> sẽ hiện. Đồng thời label của nút "Show" => "Hide"
+        let btnhs = document.querySelector('#btnhs')
+       btnhs.addEventListener('click', function () {
+        if (btnhs.innerText = 'hide') {
+                ul1.classList.toggle('toggle')
+                btnhs.innerText = 'show'
+            } else {
+                ul1.classList.toggle('toggle')
+                btnhs.innerText = 'hide'
+            }})
+        
+
+
+
 
 </script>
 
