--- a/buoi16/part-1/hw5.html
+++ b/buoi16/part-1/hw5.html
@@ -18,11 +18,6 @@
     <div id="game">
         <div class="game-container">
             <h2>Thử tài tính toán nào bạn ơi!</h2>
-            <div class="game-info">
-                <p class="score-box">Score : <span class="score"></span></p>
-                <p class="time-box">Time : <span class="time"></span></p>
-                <p class="high-score-box">High Score: <span class="high-score"></span></p>
-            </div>
             <div class="main">
                 <div id="primary-number">7</div>
                 <div id="operator">+</div>
@@ -31,28 +26,15 @@
                 <div>
                     <input type="text" id="guess">
                 </div>
+                <div class="button">
+                    <button type="button" id="smt">Kiểm tra</button>
+                </div>
             </div>
         </div>
-        <div class="lb-wrapper">
-            <h2>Bảng xếp hạng</h2>
-            <div class="lb-list">
-                <div class="list-header">
-                    <div class="list-rank"></div>
-                    <div class="list-info">Học viên</div>
-                    <div class="list-score">Điểm</div>
-                </div>
-                <div class="list-player-wrapper">
-                    <div class="list-player">
-                        <!-- RENDER OTHER RANK STUDENT -->
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
+        
     </div>
 
-    <script src="./main.js"></script>
+    <script src="./main1.js"></script>
 </body>
 
 </html>
