--- a/buoi19/typing-game/index.html
+++ b/buoi19/typing-game/index.html
@@ -32,7 +32,7 @@
         <div class="container-inner">
             <h2>Typing Game</h2>
             <div class="option">
-                <p class="time-container">Thời gian: <span id="time">10s</span></p>
+                <p class="time-container">Thời gian: <span id="time"></span></p>
                 <p class="score-container">Điểm: <span id="score">0</span></p>
             </div>
             <div class="game">
@@ -46,13 +46,13 @@
     </div>
 
     <!-- End Game -->
-    <!-- <div id="end-game-container" class="end-game-container">
+    <div id="end-game-container" class="end-game-container">
         <div class="end-game-inner">
             <h1>Hết giờ</h1>
             <p>Điểm của bạn là: <span class="score"></span></p>
             <button id="btn-reload-game">Chơi lại</button>
         </div>
-    </div> -->
+    </div>
 
     <script src="./js/main.js"></script>
 </body>
