--- a/buoi21/index.html
+++ b/buoi21/index.html
@@ -6,15 +6,15 @@
         <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
         <link type="text/css" rel="stylesheet" href="./css/style.css">
         
-        <title>Roll Point</title>
+        <title>Xóc đĩa</title>
     </head>
 
     <body>
         <div class="wrapper clearfix">
             <!-- Người chơi 1 -->
             <div class="player-0-panel active">
-                <div class="player-name" id="name-1">Người chơi 1</div>
-                <div class="player-score" id="score-1">43</div>
+                <div class="player-name" id="name-0">Người chơi 1</div>
+                <div class="player-score" id="score-0">43</div>
                 <div class="player-current-box">
                     <div class="player-current-label">Điểm</div>
                     <div class="player-current-score" id="current-0">11</div>
@@ -23,8 +23,8 @@
             
             <!-- Người chơi 1 -->
             <div class="player-1-panel">
-                <div class="player-name" id="name-2">Người chơi 2</div>
-                <div class="player-score" id="score-2">72</div>
+                <div class="player-name" id="name-1">Người chơi 2</div>
+                <div class="player-score" id="score-1">72</div>
                 <div class="player-current-box">
                     <div class="player-current-label">Điểm</div>
                     <div class="player-current-score" id="current-1">0</div>
